# AI4TS

./: LICENSE  pyproject.toml
ai4ts/: __init__.py  client.py  config.py  utils.py  version.py
